[package]
name = "tendril"
version = "0.4.3"
authors = ["Keegan McAllister <mcallister.keegan@gmail.com>",
           "Simon Sapin <simon.sapin@exyr.org>",
           "Chris Morgan <me@chrismorgan.info>"]
description = "Compact buffer/string type for zero-copy parsing."
readme = "README.md"
repository = "https://github.com/servo/tendril"
license = "MIT OR Apache-2.0"

[dependencies]
encoding = { version = "0.2", optional = true }
encoding_rs = { version = "0.8.12", optional = true }
futf = "0.1.5"
mac = "0.1"
utf-8 = "0.7"

[dev-dependencies]
rand = "0.4"

[features]
bench = []
